# VK_TUI

./: .gitignore  Cargo.toml  GNOME_HIG_PLAN.md  MULTI_FRONTEND_PLAN.md  REFACTORING_PLAN.md  ROADMAP.md  TAURI_ROADMAP.md
.github/workflows/: build-release.yml
flatpak/: com.at1ass.VkClient.desktop  com.at1ass.VkClient.metainfo.xml  com.at1ass.VkClient.yml
vk-api/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md  README.md
vk-api/src/: api.rs  auth.rs  client.rs  lib.rs  types_old.rs.bak
vk-api/src/methods/: account.rs  friends.rs  longpoll.rs  messages.rs  mod.rs  users.rs
vk-api/src/types/: attachment.rs  common.rs  group.rs  longpoll.rs  message.rs  misc.rs  mod.rs  upload.rs  user.rs
vk-api/tests/: integration_test.rs
vk-core/: Cargo.toml
vk-core/src/: lib.rs
vk-core/src/commands/: mod.rs
vk-core/src/events/: mod.rs
vk-core/src/executor/: mod.rs
vk-core/src/longpoll/: mod.rs
vk-core/src/mapper/: mod.rs
vk-core/src/models/: attachment.rs  chat.rs  message.rs  mod.rs  search.rs
vk-core/src/state/: mod.rs
vk-gui/src/: app.rs
vk-tauri/: .gitignore  BUILD.md  Cargo.toml  QUICKSTART.md  README.md  package-lock.json  package.json  tauri.conf.json
vk-tauri/assets/: vk-messenger.desktop
vk-tauri/capabilities/: default.json
vk-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
vk-tauri/ui/: index.html  package-lock.json  package.json  vite.config.js
vk-tauri/ui/src/: App.svelte  app.css  main.js
vk-tauri/ui/src/components/: AuthView.svelte  ChatList.svelte  ForwardNode.svelte  MainView.svelte  Message.svelte  MessageInput.svelte  MessageView.svelte
vk-tui/: Cargo.toml  INTERFACE.md  README.md
vk-tui/src/: actions.rs  app.rs  commands.rs  event.rs  input.rs  longpoll.rs  main.rs  mapper.rs  message.rs  search.rs  state.rs  update.rs
vk-tui/src/ui/: mod.rs
