[package]
name = "vk-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Async Rust client for VK API"
keywords = ["vk", "vkontakte", "api", "async"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Crate-specific dependencies
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
directories = "6"
time = { version = "0.3", features = ["formatting", "macros"] }
tracing = "0.1"
mime_guess = "2"

[dev-dependencies]
tokio-test = "0.4"
dirs = "5"
chrono = "0.4"
