[package]
name = "vk-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Tauri GUI client for VKontakte"

[lib]
name = "vk_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "vk-tauri"
path = "src/main.rs"

[dependencies]
# VK libraries
vk-api = { path = "../vk-api" }
vk-core = { path = "../vk-core" }

# Tauri
tauri = { version = "2.1", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File downloads
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
directories = "5.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
